# algo_repo

./: .gitignore  README.md
code/src/: Algorithmen_Tapete.drawio
code/src/array/: CMakeLists.txt
code/src/array/src/: array.cpp
code/src/graph_algorithms/astar_algorithm/: a_stern.cpp
code/src/graph_algorithms/dijkstra_shortest_path_algorithm/: CMakeLists.txt  CMakePresets.json  dijkstra.cpp  readme.md  zeiger_refernezen.cpp
